--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.4</version>
+				<version>3.2.0</version>
 				<configuration>
 					<!-- <archiveClasses>true</archiveClasses> -->
 					<failOnMissingWebXml>false</failOnMissingWebXml>
@@ -38,10 +38,12 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.7.0</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.8</source>
+					<target>1.8</target>
+                    <encoding>UTF-8</encoding>  
+                    <showWarnings>true</showWarnings>
 				</configuration>
 			</plugin>
 		</plugins>
