--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "java.configuration.updateBuildConfiguration": "automatic"
+    "maven.executable.path": "D:\\Program Files\\apache-maven-3.5.3\\bin\\mvn",
+    "java.home": "D:\\Program Files\\RedHat\\java-1.8.0-openjdk-1.8.0.161-1\\",
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
