--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
 			<id>jcenter</id>
 			<url>https://jcenter.bintray.com/</url>
 		</repository>
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
 	</repositories>
 
 	<build>
@@ -146,6 +150,11 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.9-rc</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.alex-shpak</groupId>
+			<artifactId>dropwizard-hk2bundle</artifactId>
+			<version>0.6.0</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
